# ethereum-vanity-address-generator

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
src/: keccak.rs  key_structure.rs  lib.rs  macros.rs  main.rs  sign.rs  sign_msg.rs  utils.rs
src/lib/: constants.rs  crypto_utils.rs  errors.rs  ethereum_keys.rs  generate_random_address.rs  generate_vanity_address.rs  get_cli_args.rs  get_tool_version_info.rs  initialize_logger.rs  mod.rs  types.rs  usage_info.rs  utils.rs
